--- a/first-reactjs/package.json
+++ b/first-reactjs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-new-app",
-  "version": "0.1.0",
+  "name": "first-reactjs",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "hello_pkg": "^1.0.7",
