--- a/first-reactjs/package.json
+++ b/first-reactjs/package.json
@@ -7,6 +7,8 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
     "tooltip": "^1.6.1",
     "webpack": "^2.6.1"
   },
@@ -15,6 +17,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "react-scripts": "1.0.7"
   },
   "scripts": {
