--- a/reactjs/source/package.json
+++ b/reactjs/source/package.json
@@ -8,5 +8,20 @@
   },
   "keywords": [],
   "author": "Tu Nguyen <nvminhtu@gmail.com> (http://www.minhtu.net/)",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react-hot-loader": "^1.3.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "history": "^4.6.2",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
+    "react-router": "^4.1.1"
+  }
 }
