setup project with (nodejs, webpack, babel, react packages) by node command.

--- a/reactjs/source/package.json
+++ b/reactjs/source/package.json
@@ -9,6 +9,12 @@
   "keywords": [],
   "author": "Tu Nguyen <nvminhtu@gmail.com> (http://www.minhtu.net/)",
   "license": "ISC",
+  "babel": {
+    "presets": [
+        "es2015",
+        "react"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
