--- a/reactjs/source/package.json
+++ b/reactjs/source/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "babel": {
     "presets": [
-        "es2015",
-        "react"
+      "es2015",
+      "react"
     ]
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
