cập nhật bài 4 và cách sử dụng thư viện CHANCE thay đổi Props trong JSX - React

--- a/reactjs/source/package.json
+++ b/reactjs/source/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "chance": "^1.0.9",
     "history": "^4.6.2",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
