fix bug (setState = null) - must deleare binding function for callback. (handleChangeName, handleChangeCountry)

--- a/reactjs/source/package.json
+++ b/reactjs/source/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "chance": "^1.0.9",
     "history": "^4.6.2",
     "react": "^15.6.0",
