--- a/practice/package.json
+++ b/practice/package.json
@@ -26,17 +26,20 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chance": "^1.0.9",
     "react-hot-loader": "^1.3.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-preset-stage-0": "^6.24.1",
     "history": "^4.6.2",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "superagent": "^3.5.2"
   },
   "babel": {
     "presets": [
