--- a/reactjs/project03/package.json
+++ b/reactjs/project03/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "react-hot-loader": "^1.3.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
