--- a/reactjs/project04/package.json
+++ b/reactjs/project04/package.json
@@ -32,6 +32,7 @@
     "chance": "^1.0.9",
     "history": "^4.6.2",
     "react": "^15.6.0",
+    "react-addons-update": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-router": "^4.1.1",
     "superagent": "^3.5.2"
