--- a/reactjs/project04/package.json
+++ b/reactjs/project04/package.json
@@ -23,7 +23,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.4",
     "react-hot-loader": "^1.3.1",
+    "react-svg-loader": "^1.1.1",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
