--- a/reactjs/level1/component-lifecycle/package.json
+++ b/reactjs/level1/component-lifecycle/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
     "react-scripts": "1.0.7"
   },
   "scripts": {
