--- a/reactnative/project0/android/app/build.gradle
+++ b/reactnative/project0/android/app/build.gradle
@@ -94,7 +94,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.helloworld"
+        applicationId "com.project0"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
