--- a/project04/package.json
+++ b/project04/package.json
@@ -30,6 +30,8 @@
     "css-loader": "^0.28.4",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
+    "svg-loader": "0.0.2",
+    "svg-react-loader": "^0.4.3",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
@@ -37,7 +39,10 @@
     "axios": "^0.16.2",
     "babel-preset-stage-0": "^6.24.1",
     "history": "^4.6.2",
+    "prop-types": "^15.5.10",
     "react": "^15.6.0",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-update": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
