learning es6 syntax

--- a/reactjs/newstack/learning-es6/package.json
+++ b/reactjs/newstack/learning-es6/package.json
@@ -5,9 +5,9 @@
   "browserslist": ["> 1%"],
   "scripts": {
     "start": "babel-node src",
-    "test": "eslint src && flow && jest --coverage",
-    "precommit": "npm test",
-    "prepush": "npm test"
+    "test": "eslint src",
+    "precommit": "yarn test",
+    "prepush": "yarn test"
   },
   "dependencies": {},
   "devDependencies": {
