--- a/es6/package.json
+++ b/es6/package.json
@@ -4,6 +4,8 @@
   "description": "# 1. BUILD SOURCE WITH WEBPACK",
   "main": "index.js",
   "scripts": {
+    "webpack": "webpack",
+    "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,5 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.10"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^4.8.1"
   }
 }
