--- a/projects/03.reactofficial/firstapp/package.json
+++ b/projects/03.reactofficial/firstapp/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "chance": "^1.0.16",
     "react-scripts": "1.1.4"
   },
   "scripts": {
